fix gaps

--- a/css/sections/hero.css
+++ b/css/sections/hero.css
@@ -38,7 +38,7 @@
 }
 
 .hero-content {
-  flex: 1.219;
+  flex: 1.22;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
